# fm-difficulty-probe

./: .gitignore  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  SEAMS.md  SECURITY.md  pyproject.toml  reproduce.sh  requirements.txt
.github/: dependabot.yml
.github/workflows/: ci.yml
configs/: README.md  llm_hellaswag.yaml  llm_squad.yaml  tsfm_etth1.yaml
core/: _log.py  _repro.py  calibration.py  cascade.py  patching.py  probe.py  sae.py  selective.py  stats.py
data/: README.md
experiments/: __init__.py  causal_llm.py  causal_tsfm.py  run.py  synthesize.py  train_sae.py
modalities/: base.py  llm.py  tsfm.py
paper/: LICENSE  README.md  main.tex  outline.md  references.bib  submission_materials.md
results/: cross_modal_synthesis.json  cross_modal_synthesis.md  expansion_robustness.md
results/llm_hellaswag/: cascade_results.json  probe_results.json  recalibration_results.json  selective_prediction.json
results/llm_squad/: cascade_results.json  probe_results.json  recalibration_results.json  selective_prediction.json
results/llm_squad_exp8/: probe_results.json
results/llm_squad_late/: probe_results.json
results/tsfm_etth1/: cascade_results.json  causal_ablation_all.json  causal_ablation_last.json  probe_results.json  recalibration_results.json  selective_prediction.json
results/tsfm_etth1_exp4/: probe_results.json
results/tsfm_etth1_late/: probe_results.json
tests/: test_core_synthetic.py  test_patching.py
